--- a/html/biere-5.html
+++ b/html/biere-5.html
@@ -10,6 +10,8 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    <link rel="stylesheet" href="../style/biere-5.css">
 </head>
 
 <body>
