feat: add navbar with navigation to the index

--- a/html/biere-5.html
+++ b/html/biere-5.html
@@ -16,5 +16,9 @@
 
 <body>
 </body>
-
+<nav>
+    <div class="nav-wrapper">
+      <a href="../index.html" class="brand-logo">Logo</a>
+    </div>
+  </nav>
 </html>
