--- a/html/biere-5.html
+++ b/html/biere-5.html
@@ -11,6 +11,8 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link rel="stylesheet" href="../style/biere-5.css">
 </head>
 
@@ -18,7 +20,10 @@
 </body>
 <nav>
     <div class="nav-wrapper">
-      <a href="../index.html" class="brand-logo">Logo</a>
+        <a href="../index.html" class="brand-logo">
+            <i class="material-icons">arrow_back</i>
+        </a>
     </div>
-  </nav>
+</nav>
+
 </html>
