--- a/html/biere-9.html
+++ b/html/biere-9.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="../style/biere-9.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <title>Catalogue de bières</title>
 </head>
 <body>
-
+<nav>
+    <div class="nav-wrapper">
+        <a href="index.html" class="brand-logo">
+            <i class="material-icons brand-back">keyboard_arrow_left</i>
+        </a>
+        <span class="brand-logo center">Bière 9</span>
+    </div>
+</nav>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
