Ajout json et materialize

--- a/index.html
+++ b/index.html
@@ -1,164 +1,164 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<!-- Compiled and minified CSS -->
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-		/>
 
-		<!-- Compiled and minified JavaScript -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-		<link rel="stylesheet" href="./style/index.css" />
-	</head>
-	<body>
-		<h1>Catalogue des bières</h1>
-		<div id="liste-bieres">
-			<div class="biere">
-				<a href="./html/biere-1.html">Bière 1</a>
-				<img src="./media/biere-1.png" alt="Bière 1" />
-				<p>baseline 1</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-2.html">Bière 2</a>
-				<img src="./media/biere-2.png" alt="Bière 2" />
-				<p>baseline 2</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-3.html">Bière 3</a>
-				<img src="./media/biere-3.png" alt="Bière 3" />
-				<p>baseline 3</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-4.html">Bière 4</a>
-				<img src="./media/biere-4.png" alt="Bière 4" />
-				<p>baseline 4</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-5.html">Bière 5</a>
-				<img src="./media/biere-5.png" alt="Bière 5" />
-				<p>baseline 5</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-6.html">Bière 6</a>
-				<img src="./media/biere-6.png" alt="Bière 6" />
-				<p>baseline 6</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-7.html">Bière 7</a>
-				<img src="./media/biere-7.png" alt="Bière 7" />
-				<p>baseline 7</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-8.html">Bière 8</a>
-				<img src="./media/biere-8.png" alt="Bière 8" />
-				<p>baseline 8</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-9.html">Bière 9</a>
-				<img src="./media/biere-9.png" alt="Bière 9" />
-				<p>baseline 9</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-10.html">Bière 10</a>
-				<img src="./media/biere-10.png" alt="Bière 10" />
-				<p>baseline 10</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-11.html">Bière 11</a>
-				<img src="./media/biere-11.png" alt="Bière 11" />
-				<p>baseline 11</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-12.html">Bière 12</a>
-				<img src="./media/biere-12.png" alt="Bière 12" />
-				<p>baseline 12</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-13.html">Bière 13</a>
-				<img src="./media/biere-13.png" alt="Bière 13" />
-				<p>baseline 13</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-14.html">Bière 14</a>
-				<img src="./media/biere-14.png" alt="Bière 14" />
-				<p>baseline 14</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-15.html">Bière 15</a>
-				<img src="./media/biere-15.png" alt="Bière 15" />
-				<p>baseline 15</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-16.html">Bière 16</a>
-				<img src="./media/biere-16.png" alt="Bière 16" />
-				<p>baseline 16</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-17.html">Bière 17</a>
-				<img src="./media/biere-17.png" alt="Bière 17" />
-				<p>baseline 17</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-18.html">Bière 18</a>
-				<img src="./media/biere-18.png" alt="Bière 18" />
-				<p>baseline 18</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-19.html">Bière 19</a>
-				<img src="./media/biere-19.png" alt="Bière 19" />
-				<p>baseline 19</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-20.html">Bière 20</a>
-				<img src="./media/biere-20.png" alt="Bière 20" />
-				<p>baseline 20</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-21.html">Bière 21</a>
-				<img src="./media/biere-21.png" alt="Bière 21" />
-				<p>baseline 21</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-22.html">Bière 22</a>
-				<img src="./media/biere-22.png" alt="Bière 22" />
-				<p>baseline 22</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-23.html">Bière 23</a>
-				<img src="./media/biere-23.png" alt="Bière 23" />
-				<p>baseline 23</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-24.html">Bière 24</a>
-				<img src="./media/biere-24.png" alt="Bière 24" />
-				<p>baseline 24</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-25.html">Bière 25</a>
-				<img src="./media/biere-25.png" alt="Bière 25" />
-				<p>baseline 25</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-26.html">Bière 26</a>
-				<img src="./media/biere-26.png" alt="Bière 26" />
-				<p>baseline 26</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-27.html">Bière 27</a>
-				<img src="./media/biere-27.png" alt="Bière 27" />
-				<p>baseline 27</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-28.html">Bière 28</a>
-				<img src="./media/biere-28.png" alt="Bière 28" />
-				<p>baseline 28</p>
-			</div>
-			<div class="biere">
-				<a href="./html/biere-29.html">Bière 29</a>
-				<img src="./media/biere-29.png" alt="Bière 29" />
-				<p>baseline 29</p>
-			</div>
+<head>
+	<!-- Compiled and minified CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+
+	<!-- Compiled and minified JavaScript -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<link rel="stylesheet" href="./style/index.css" />
+</head>
+
+<body>
+	<h1>Catalogue des bières</h1>
+	<div id="liste-bieres">
+		<div class="biere">
+			<a href="./html/biere-1.html">Bière 1</a>
+			<img src="./media/biere-1.png" alt="Bière 1" />
+			<p>baseline 1</p>
 		</div>
-	</body>
+		<div class="biere">
+			<a href="./html/biere-2.html">Bière 2</a>
+			<img src="./media/biere-2.png" alt="Bière 2" />
+			<p>baseline 2</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-3.html">Bière 3</a>
+			<img src="./media/biere-3.png" alt="Bière 3" />
+			<p>baseline 3</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-4.html">Bière 4</a>
+			<img src="./media/biere-4.png" alt="Bière 4" />
+			<p>baseline 4</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-5.html">Bière 5</a>
+			<img src="./media/biere-5.png" alt="Bière 5" />
+			<p>baseline 5</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-6.html">Bière 6</a>
+			<img src="./media/biere-6.png" alt="Bière 6" />
+			<p>baseline 6</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-7.html">Bière 7</a>
+			<img src="./media/biere-7.png" alt="Bière 7" />
+			<p>baseline 7</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-8.html">Bière 8</a>
+			<img src="./media/biere-8.png" alt="Bière 8" />
+			<p>baseline 8</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-9.html">Bière 9</a>
+			<img src="./media/biere-9.png" alt="Bière 9" />
+			<p>baseline 9</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-10.html">Bière 10</a>
+			<img src="./media/biere-10.png" alt="Bière 10" />
+			<p>baseline 10</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-11.html">Bière 11</a>
+			<img src="./media/biere-11.png" alt="Bière 11" />
+			<p>baseline 11</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-12.html">Bière 12</a>
+			<img src="./media/biere-12.png" alt="Bière 12" />
+			<p>baseline 12</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-13.html">Bière 13</a>
+			<img src="./media/biere-13.png" alt="Bière 13" />
+			<p>baseline 13</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-14.html">Bière 14</a>
+			<img src="./media/biere-14.png" alt="Bière 14" />
+			<p>baseline 14</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-15.html">Bière 15</a>
+			<img src="./media/biere-15.png" alt="Bière 15" />
+			<p>baseline 15</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-16.html">Bière 16</a>
+			<img src="./media/biere-16.png" alt="Bière 16" />
+			<p>baseline 16</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-17.html">Bière 17</a>
+			<img src="./media/biere-17.png" alt="Bière 17" />
+			<p>baseline 17</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-18.html">Bière 18</a>
+			<img src="./media/biere-18.png" alt="Bière 18" />
+			<p>baseline 18</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-19.html">Bière 19</a>
+			<img src="./media/biere-19.png" alt="Bière 19" />
+			<p>baseline 19</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-20.html">Bière 20</a>
+			<img src="./media/biere-20.png" alt="Bière 20" />
+			<p>baseline 20</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-21.html">Bière 21</a>
+			<img src="./media/biere-21.png" alt="Bière 21" />
+			<p>baseline 21</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-22.html">Bière 22</a>
+			<img src="./media/biere-22.png" alt="Bière 22" />
+			<p>baseline 22</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-23.html">Bière 23</a>
+			<img src="./media/biere-23.png" alt="Bière 23" />
+			<p>baseline 23</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-24.html">Bière 24</a>
+			<img src="./media/biere-24.png" alt="Bière 24" />
+			<p>baseline 24</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-25.html">Bière 25</a>
+			<img src="./media/biere-25.png" alt="Bière 25" />
+			<p>baseline 25</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-26.html">Bière 26</a>
+			<img src="./media/biere-26.png" alt="Bière 26" />
+			<p>baseline 26</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-27.html">Bière 27</a>
+			<img src="./media/biere-27.png" alt="Bière 27" />
+			<p>baseline 27</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-28.html">Bière 28</a>
+			<img src="./media/biere-28.png" alt="Bière 28" />
+			<p>baseline 28</p>
+		</div>
+		<div class="biere">
+			<a href="./html/biere-29.html">Bière 29</a>
+			<img src="./media/biere-29.png" alt="Bière 29" />
+			<p>baseline 29</p>
+		</div>
+	</div>
+</body>
+
 </html>
