--- a/html/biere-6.html
+++ b/html/biere-6.html
@@ -6,12 +6,15 @@
     <title>Bière 6</title>
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col s4">back button</div>
-        <div class="col s4">title</div>
-        <div class="col s4">blank</div>
+    <nav>
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo center">Bière 6</a>
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+          <li>Back button</li>
+        </ul>
       </div>
+    </nav>
+    <div class="container">
       <div class="row">
         <div class="col s4">
           <div class="row">
