chore(biere-5): add footer

--- a/html/biere-5.html
+++ b/html/biere-5.html
@@ -26,4 +26,14 @@
     </div>
 </nav>
 
+<main></main>
+
+<footer class="page-footer">
+    <div class="footer-copyright">
+        <div class="container center-align">
+            ShauniArima - FILA2
+        </div>
+    </div>
+</footer>
+
 </html>
