--- a/html/biere-9.html
+++ b/html/biere-9.html
@@ -19,5 +19,16 @@
     </div>
 </nav>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<main>
+
+</main>
+
+<footer class="page-footer">
+    <div class="container center">
+        <div class="row center">
+            <span>Léo LECLERC</span>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
