feat: adding header

--- a/html/biere-12.html
+++ b/html/biere-12.html
@@ -11,7 +11,14 @@
 </head>
 <body>
 
-
+<nav>
+    <div class="nav-wrapper">
+        <a href="#" class="brand-logo center">Arcade Nation</a>
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+            <li><a class="btn-floating disabled" href="../index.html"><i class="material-icons">keyboard_arrow_left</i></a></li>
+        </ul>
+    </div>
+</nav>
 
 <!--JavaScript at end of body for optimized loading-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
