--- a/html/biere-9.html
+++ b/html/biere-9.html
@@ -21,6 +21,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <main>
 
+    <div class="fixed-action-btn">
+        <a class="btn-floating btn-large red">
+            <i class="large material-icons">mode_edit</i>
+        </a>
+    </div>
 </main>
 
 <footer class="page-footer">
