chore(biere-5): add edit fab

--- a/html/biere-5.html
+++ b/html/biere-5.html
@@ -26,7 +26,15 @@
     </div>
 </nav>
 
-<main></main>
+<main>
+
+    <div class="fixed-action-btn">
+        <a class="btn-floating btn-large red">
+            <i class="large material-icons">mode_edit</i>
+        </a>
+    </div>
+
+</main>
 
 <footer class="page-footer">
     <div class="footer-copyright">
