--- a/html/biere-13.html
+++ b/html/biere-13.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-    <title>Bière 13</title>
+    <title>Catalogue de bières - Bière 13</title>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Compiled and minified JavaScript -->
@@ -11,7 +13,14 @@
 </head>
 
 <body>
-
+    <nav>
+        <div class="nav-wrapper">
+            <span href="#" class="brand-logo center">Bière 13</span>
+            <ul id="nav-mobile" class="left hide-on-med-and-down">
+                <li><a href="../index.html"><i class="material-icons">keyboard_arrow_left</i></a></li>
+            </ul>
+        </div>
+    </nav>
 </body>
 
 </html>
