--- a/html/biere-6.html
+++ b/html/biere-6.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="../style/biere-6.css">
     <title>Bière 6</title>
   </head>
   <body>
@@ -33,9 +34,15 @@
           <div class="row">comment</div>
         </div>
       </div>
-      <div class="row">
-        <div class="col s12">nom + prénom</div>
-      </div>
     </div>
+    <footer class="page-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col s12 center">
+            Thomas Gaubert
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
