--- a/html/biere-1.html
+++ b/html/biere-1.html
@@ -4,8 +4,8 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-    <!-- Compiled and minified JavaScript -->
+    <link href="../style/biere-1.css" rel="stylesheet">
+    <!-- Compiled and minified JavaScript -->   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 
@@ -22,6 +22,28 @@
             <a class="brand-logo center">Buzz</a>
         </div>
     </nav>
+    <div class="container">
+        <div class="col s6">
+            specs
+        </div>
+        <div class="col s6">
+            tableau
+        </div>
+        <div class="col s6">
+            rating
+        </div>
+        <div class="col s6">
+            textinput
+        </div>
+        <div class="col s12">
+            precedent/suivant
+        </div>
+    </div>
+    <footer class="page-footer">
+        <div class="container">
+            Audo Thomas
+        </div>
+    </footer>
 </body>
 
 </html>
