[BIERE-9] Add button

--- a/html/biere-9.html
+++ b/html/biere-9.html
@@ -20,12 +20,22 @@
 </nav>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <main>
-
     <div class="fixed-action-btn">
         <a class="btn-floating btn-large red">
             <i class="large material-icons">mode_edit</i>
         </a>
     </div>
+
+    <div class="row">
+        <div class="col s6">6-columns (one-half)</div>
+        <div class="col s6">6-columns (one-half)</div>
+    </div>
+
+    <div class="container center button-container">
+        <a class="waves-effect waves-light btn">Précendent</a>
+        <a class="waves-effect waves-light btn">Suivant</a>
+    </div>
+
 </main>
 
 <footer class="page-footer">
