--- a/html/biere-7.html
+++ b/html/biere-7.html
@@ -16,6 +16,15 @@
         </div>
     </nav>
 
+    <div class="container">
+        <div class="row">
+            <div class="col s4">
+                <img class="materialboxed" width="250" src="../media/biere-7.png" >
+            </div>
+            <div class="col s2"></div>
+            <div class="col s6">6-columns (one-half)</div>
+        </div>
+    </div>
 </body>
 
 </html>
