--- a/html/biere-1.html
+++ b/html/biere-1.html
@@ -23,17 +23,21 @@
         </div>
     </nav>
     <div class="container">
-        <div class="col s6">
-            specs
+        <div class="row">
+            <div class="col s6">
+                specs
+            </div>
+            <div class="col s6">
+                tableau
+            </div>
         </div>
-        <div class="col s6">
-            tableau
-        </div>
-        <div class="col s6">
-            rating
-        </div>
-        <div class="col s6">
-            textinput
+        <div class="row">
+            <div class="col s6">
+                rating
+            </div>
+            <div class="col s6">
+                textinput
+            </div>
         </div>
         <div class="col s12">
             precedent/suivant
