--- a/html/biere-8.html
+++ b/html/biere-8.html
@@ -4,10 +4,47 @@
 	<meta charset="UTF-8">
 	<title>Catalogue de bières</title>
 	
+	<!-- Materialize -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	
 	<!-- Stylesheet -->
 	<link rel="stylesheet" href="../style/biere-8.css">
 </head>
 <body>
-
+	<div class="container">
+		<!-- Left column -->
+		<div class="col s4">
+		
+		</div>
+		
+		<!-- Right column -->
+		<div class="col s8">
+			<!-- Ingredients table -->
+			<table>
+				<thead>
+					<tr><th colspan="2">Ingrédients</th> <th>Ajout</th> <th>Quantité</th></tr>
+				</thead>
+				<tbody>
+					<tr><th colspan="4">Malts</th></tr>
+					<tr><td></td> <td colspan="2">Extra Pale</td>      <td>3,33 kg</td></tr>
+					<tr><td></td> <td colspan="2">Munich</td>          <td>0,42 kg</td></tr>
+					<tr><td></td> <td colspan="2">Caramalt</td>        <td>0,28 kg</td></tr>
+					<tr><td></td> <td colspan="2">Acidulated Malt</td> <td>0,07 kg</td></tr>
+					
+					<tr><th colspan="4">Houblons</th></tr>
+					<tr><td></td> <td>Magnum</td>      <td>Début</td>  <td>7.5 g</td></tr>
+					<tr><td></td> <td>Magnum</td>      <td>Milieu</td> <td>5 g</td></tr>
+					<tr><td></td> <td>Hersbrucker</td> <td>Milieu</td> <td>6,25 g</td></tr>
+					<tr><td></td> <td>Saaz</td>        <td>Milieu</td> <td>6,25 g</td></tr>
+					<tr><td></td> <td>Hersbrucker</td> <td>Fin</td>    <td>18,75 g</td></tr>
+					<tr><td></td> <td>Saaz</td>        <td>Fin</td>    <td>18,75 g</td></tr>
+					
+					<tr><th colspan="4">Levure</th></tr>
+					<tr><td></td> <td colspan="3">Wyeast 2007 - Pilsen Lager™</td></tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
 </body>
 </html>
