--- a/html/biere-23.html
+++ b/html/biere-23.html
@@ -19,7 +19,10 @@
                 </ul>
             </div>
         </nav>
-        
+        <div class="row">
+        </div>
+        <div class="row">
+        </div>
 
     <footer class="page-footer">
         <div class="footer-copyright">
