--- a/html/biere-14.html
+++ b/html/biere-14.html
@@ -12,16 +12,23 @@
    </head>
 
    <body>
+        <header>
+            <nav>
+                <div class="nav-wrapper">
+                    <div class="center">Catalogue de bières</div>
+                </div>
+            </nav>
+        </header>
 
 
-    <footer class="page-footer">
-        <div class="container">
-            <div class="row">
-                Quentin FILA2
+        <footer class="page-footer">
+            <div class="container">
+                <div class="row">
+                    Quentin FILA2
+                </div>
             </div>
-        </div>
-    </footer>
-     <!--JavaScript at end of body for optimized loading-->
-     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        </footer>
+        <!--JavaScript at end of body for optimized loading-->
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
    </body>
  </html>
