--- a/html/biere-23.html
+++ b/html/biere-23.html
@@ -20,8 +20,15 @@
             </div>
         </nav>
         <div class="row">
+            <div class="col s1">1</div>
+            <div class="col s1">2</div>
+            <div class="col s1">
+              
+            </div>
         </div>
         <div class="row">
+            <a class="waves-effect waves-light btn">Précédent</a>
+            <a class="waves-effect waves-light btn">Suivant</a>
         </div>
 
     <footer class="page-footer">
