ajout de l'image de la bière 10

--- a/html/biere-10.html
+++ b/html/biere-10.html
@@ -14,6 +14,22 @@
 	<body>
         <div class="container">
             <!-- Page Content goes here -->
+            
+            <!-- Image de la bière -->
+            <div class="row">
+                <div class="col s1">
+                    <img
+                        src="https://images.punkapi.com/v2/10.png" 
+                        alt="Bière n°10"
+                        height="400px" 
+                        width="100px" 
+                    />
+                </div>
+            </div>
+            <!-- Liste des caractéristiques -->
+
+
+            <!-- Boutons Précédent/Suivant -->
             <div class="row">
                 <div class="col s2 offset-s4"><a class="waves-effect waves-light btn">Précédent</a></div>
                 <div class="col s2"><a class="waves-effect waves-light btn">Suivant</a></div>
