--- a/html/biere-12.html
+++ b/html/biere-12.html
@@ -20,6 +20,103 @@
     </div>
 </nav>
 
+<div class="container">
+    <div class="row">
+        <div class="col s5"></div>
+        <div class="col s7">
+            <table class="centered">
+                <thead>
+                <tr>
+                    <th>malt</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                </thead>
+
+                <tbody>
+                <tr>
+                    <td></td>
+                    <td>Pale Ale</td>
+                    <td>3.13kg</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Caramalt</td>
+                    <td>0.25kg</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Crystal 150</td>
+                    <td>0.18kg</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Carafa Special Malt Type 1</td>
+                    <td>0.25kg</td>
+                </tr>
+
+                <tr>
+                    <td><b>hops</b></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Simcoe bitter (start)</td>
+                    <td>12.5g</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Simcoe flavour (middle)</td>
+                    <td>19g</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Simcoe flavour (end)</td>
+                    <td>12.5g</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Amarillo flavour (end)</td>
+                    <td>12.5g</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Citra flavour (end)</td>
+                    <td>12.5g</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Simcoe aroma (dry hop)</td>
+                    <td>62.5g</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Amarillo aroma (dry hop)</td>
+                    <td>62.5g</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Citra aroma (dry hop)</td>
+                    <td>62.5g</td>
+                </tr>
+
+                <tr>
+                    <td><b>yeast</b></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Wyeast 1056 - American Ale&trade;</td>
+                </tr>
+
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
 <!--JavaScript at end of body for optimized loading-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
