:sparkles: photo + desc

--- a/html/biere-1.html
+++ b/html/biere-1.html
@@ -23,9 +23,28 @@
         </div>
     </nav>
     <div class="container">
+        <div class="spacer"></div>
         <div class="row">
             <div class="col s6">
-                specs
+                <div class="row">
+                    <div class="col s6">
+                        <img src="https://images.punkapi.com/v2/keg.png" id="beerPhoto">
+                    </div>
+                    <div class="col s6">
+                        <p><span class="dataName">First brewed: </span>09/2007</p>
+                        <p><span class="dataName">PH: </span>4.4</p>
+                        <p><span class="dataName">Attenuation level: </span>75</p>
+                        <p><span class="dataName">Boil volume: </span>25 litres</p>
+                        <p><span class="dataName">Food pairing: </span></p>
+                        <ul class="collection" id="foodPairing">
+                            <li class="collection-item">Spicy chicken tikka masala</li>
+                            <li class="collection-item">Grilled chicken quesadilla</li>
+                            <li class="collection-item">Caramel toffee cake</li>
+                        </ul>
+                        <p><span class="dataName">Déjà bu?: </span></p>
+                        <p><span class="dataName">Date de dégustation: </span>14/0/2020</p>
+                    </div>
+                </div>
             </div>
             <div class="col s6">
                 tableau
