--- a/html/biere-2.html
+++ b/html/biere-2.html
@@ -14,5 +14,6 @@
         <link rel="stylesheet" href="../style/biere-2.css" />
     </head>
     <body>
+        <a class="waves-effect waves-light btn">Précédent</a>
     </body>
 </html>
