--- a/html/biere-2.html
+++ b/html/biere-2.html
@@ -15,5 +15,6 @@
     </head>
     <body>
         <a class="waves-effect waves-light btn">Précédent</a>
+        <a class="waves-effect waves-light btn">Suivant</a>
     </body>
 </html>
