first section done

--- a/html/biere-26.html
+++ b/html/biere-26.html
@@ -1,17 +1,82 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<!-- Compiled and minified CSS -->
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-		/>
+  <head>
+    <!-- Compiled and minified CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
 
-		<!-- Compiled and minified JavaScript -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-		<link rel="stylesheet" href="./style/bière-26.css" />
-    </head>
-    <body>
-        
-    </body>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="../style/biere-26.css" />
+
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <nav>
+      <div class="nav-wrapper">
+        <ul class="left">
+          <li>
+            <a href="../index.html"
+              ><i class="material-icons">keyboard_arrow_left</i></a
+            >
+          </li>
+        </ul>
+        <a href="../index.html" class="brand-logo center">Bière</a>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="row">
+        <div class="col s5 beer-desc">
+          <div class="desc-row">
+            <div class="img-container">
+              <img src="../media/biere-26.png" class="responsive-img" />
+            </div>
+            <div>
+              <h6>first_brewed</h6>
+              <h6>PH</h6>
+              <h6>attenuation_level</h6>
+              <h6>boil_volume</h6>
+              <h6>food_pairing</h6>
+              <ul class="list">
+                <li>food_pairing</li>
+                <li>food_pairing</li>
+                <li>food_pairing</li>
+              </ul>
+              <form>
+                <label>
+                  <input type="checkbox" />
+                  <span>Déjà bu</span>
+                </label>
+              </form>
+              <h6>Date de dégustation</h6>
+            </div>
+          </div>
+          <div>
+            <h6>tagline</h6>
+            <div>
+              <i class="material-icons">star</i>
+              <i class="material-icons">star</i>
+              <i class="material-icons">star</i>
+              <i class="material-icons">star</i>
+              <i class="material-icons">star</i>
+            </div>
+            <div>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </div>
+            <h6>brewers_tips</h6>
+            <h6>contributed_by</h6>
+          </div>
+        </div>
+        <div class="col s7 t2">S6</div>
+      </div>
+    </div>
+  </body>
 </html>
