Center nav and footer

--- a/html/biere-23.html
+++ b/html/biere-23.html
@@ -14,16 +14,40 @@
     <body>
         <nav>
             <div class="nav-wrapper">
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li>Storm</li>
-                </ul>
+                <p class="center">Storm</p>
             </div>
         </nav>
         <div class="row">
             <div class="col s1">1</div>
-            <div class="col s1">2</div>
             <div class="col s1">
-              
+                <table class="responsive-table striped">
+                    <thead>
+                      <tr>
+                          <th>Malt</th>
+                      </tr>
+                    </thead>
+            
+                    <tbody>
+                      <tr>
+                        <td>Alvin</td>
+                        <td>Eclair</td>
+                        <td>$0.87</td>
+                      </tr>
+                      <tr>
+                        <td>Alan</td>
+                        <td>Jellybean</td>
+                        <td>$3.76</td>
+                      </tr>
+                      <tr>
+                        <td>Jonathan</td>
+                        <td>Lollipop</td>
+                        <td>$7.00</td>
+                      </tr>
+                    </tbody>
+                  </table>
+            </div>
+            <div class="col s1">
+                <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
             </div>
         </div>
         <div class="row">
@@ -32,11 +56,9 @@
         </div>
 
     <footer class="page-footer">
-        <div class="footer-copyright">
-            <div class="container">
+            <div class="container center">
                 Delphine FILA2
             </div>
-        </div>
     </footer>
 </body>
 </html>
