Add fixed edit button

--- a/html/biere-2.html
+++ b/html/biere-2.html
@@ -16,5 +16,6 @@
     <body>
         <a class="waves-effect waves-light btn">Précédent</a>
         <a class="waves-effect waves-light btn">Suivant</a>
+        <a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">add</i></a>
     </body>
 </html>
