--- a/html/biere-14.html
+++ b/html/biere-14.html
@@ -20,6 +20,60 @@
             </nav>
         </header>
 
+        <main>
+            <h1></h1>
+            <div class="container">
+                <div class="row">
+                    <div class="col s6"></div>
+                    <div class="col s6">
+                        <table class="striped">
+                            <thead>
+                                <tr>
+                                <th>malt</th>
+                                <th></th>
+                                <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td></td>
+                                    <td>name</td>
+                                    <td>amount</td>
+                                </tr>
+                                <tr>
+                                    <td>hops</td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>name</td>
+                                    <td>amount</td>
+                                </tr>
+                                <tr>
+                                    <td>yeast</td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>name</td>
+                                    <td>amount</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s6"></div>
+                    <div class="col s6"></div>
+                </div>
+                <div class="row buttons">
+                    
+                </div>
+            </div>
+        </main>
+
 
         <footer class="page-footer">
             <div class="container">
