--- a/html/biere-1.html
+++ b/html/biere-1.html
@@ -47,7 +47,50 @@
                 </div>
             </div>
             <div class="col s6">
-                tableau
+                <table class="responsive-table">
+                    <tbody>
+                      <tr>
+                        <td class="dataName">Malt</td>
+                      </tr>
+                      <tr>
+                        <td></td>
+                        <td>Maris Otter Extra Pale</td>
+                        <td>3.3 kilograms</td>
+                      </tr>
+                      <tr>
+                        <td></td>
+                        <td>Caramalt</td>
+                        <td>0.2 kilograms</td>
+                      </tr>
+                      <tr>
+                        <td></td>
+                        <td>Munich</td>
+                        <td>0.4 kilograms</td>
+                      </tr>
+                      <tr>
+                        <td class="dataName">Hops</td>
+                        <tr>
+                            <td></td>
+                            <td>Fuggles</td>
+                            <td>25 grams</td>
+                          </tr>
+                          <tr>
+                            <td></td>
+                            <td>First Gold</td>
+                            <td>25 grams</td>
+                          </tr>
+                      </tr>
+                      <tr>
+                          <td class="dataName">Yeast</td>
+                          <tr>
+                              <td>
+                              </td>
+                              <td>Wyeast 1056</td>
+                              <td>American Ale</td>
+                          </tr>
+                      </tr>
+                    </tbody>
+                  </table>
             </div>
         </div>
         <div class="row">
