--- a/html/biere-13.html
+++ b/html/biere-13.html
@@ -15,31 +15,70 @@
 <body>
     <nav>
         <div class="nav-wrapper">
-            <span href="#" class="brand-logo center">Bière 13</span>
+            <span href="#" class="brand-logo center">Bière 13 - Movember</span>
             <ul id="nav-mobile" class="left hide-on-med-and-down">
                 <li><a href="../index.html"><i class="material-icons">keyboard_arrow_left</i></a></li>
             </ul>
         </div>
     </nav>
 
+    <div class="container">
+        <table class="striped">
+            <thead>
+                <tr>
+                    <th>Ingredient</th>
+                    <th>Name</th>
+                    <th>Amount</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>Malt</td>
+                    <td>Maris Otter Extra Pale</td>
+                    <td>3.44 kilograms</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Caramalt</td>
+                    <td>0.63 kilograms</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Crystal 150</td>
+                    <td>0.31 kilograms</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Carafa Special Malt Type 1</td>
+                    <td>0.31 kilograms</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Carafa Special Malt Type 3</td>
+                    <td>0.31 kilograms</td>
+                </tr>
+                <tr>
+                    <td>Hops</td>
+                    <td>Cascade</td>
+                    <td>43.8 grams</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Cascade</td>
+                    <td>81.3 grams</td>
+                </tr>
+                <tr>
+                    <td>Yeast</td>
+                    <td>Wyeast 1056 - American Ale™</td>
+                    <td></td>
+                </tr>
+
+            </tbody>
+        </table>
+    </div>
+
     <footer class="page-footer">
-        <!-- <div class="container">
-          <div class="row">
-            <div class="col l6 s12">
-              <h5 class="white-text">Footer Content</h5>
-              <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-            </div>
-            <div class="col l4 offset-l2 s12">
-              <h5 class="white-text">Links</h5>
-              <ul>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-              </ul>
-            </div>
-          </div>
-        </div> -->
         <div class="footer-copyright">
             <div class="container center white-text">
                 <span>Arthur - FIL A2</span>
