feat: adding image + desc

--- a/html/biere-12.html
+++ b/html/biere-12.html
@@ -22,7 +22,34 @@
 
 <div class="container">
     <div class="row">
-        <div class="col s5"></div>
+        <div class="col s5">
+            <div class="row">
+                <div class="col s3">
+                    <img width="100%" src="../media/biere-12.png" alt="Seasonal Black IPA image">
+                </div>
+                <div class="col s9">
+                    <p>First brewed : 12/2015</p>
+                    <p>ph : 4.2</p>
+                    <p>Attenuation level : 77</p>
+                    <p>Boil volume : 25l</p>
+                    <p>Food pairing :</p>
+                    <ul>
+                        <li>King prawn kebabs</li>
+                        <li>Halibut with a mango and tomato salad</li>
+                        <li>Mint chocloate ice cream</li>
+                    </ul>
+                    <p>
+                        <label>
+                            <input type="checkbox" class="filled-in" checked="checked" />
+                            <span>Already drunk</span>
+                        </label>
+                    </p>
+                </div>
+                <div class="col s12">
+                    <p>Seasonal Black IPA.</p>
+                </div>
+            </div>
+        </div>
         <div class="col s7">
             <table class="centered">
                 <thead>
