--- a/html/biere-2.html
+++ b/html/biere-2.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="../style/biere-2.css" />
     </head>
     <body>
+        <img #beerImg src="../media/biere-2.png" alt="Photo de la bière Trashy Blonde, avec une étiquette violette et pleins de petits psssshhhh de graffitis partout sur la bouteille.">
         <a class="waves-effect waves-light btn">Précédent</a>
         <a class="waves-effect waves-light btn">Suivant</a>
         <a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">add</i></a>
