Component information and table

--- a/html/biere-7.html
+++ b/html/biere-7.html
@@ -7,6 +7,8 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="stylesheet" href="../style/biere-7.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 <body>
@@ -18,11 +20,65 @@
 
     <div class="container">
         <div class="row">
-            <div class="col s4">
-                <img class="materialboxed" width="250" src="../media/biere-7.png" >
+            <div class="col s5">
+                <div class="col s6 center">
+                    <img class="materialboxed" width="200" src="../media/biere-7.png">
+                    Imperial Black Belgian Ale.
+                </div>
+                <div class="col s6">
+                    <ul class="collection">
+                        <li>07/2012</li>
+                        <li>5.3</li>
+                        <li>84</li>
+                        <li>25 litres</li>
+                        <li>food_pairing</li>
+
+                        <li>Tandoori lamb with pomegranate</li>
+                        <li>Beef Wellington with a red wine jus</li>
+                        <li>Raspberry chocolate torte</li>
+                        <p>
+                            <label>
+                                <input type="checkbox" />
+                                <span>Déjà bu</span>
+                            </label>
+                        </p>
+                        <li>24/10/2019</li>
+                        <p>84</li>
+                    </ul>
+                </div>
+
+
             </div>
-            <div class="col s2"></div>
-            <div class="col s6">6-columns (one-half)</div>
+            <div class="col s1"></div>
+            <div class="col s6">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Malt</th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr>
+                            <td></td>
+                            <td>Extra Pale</td>
+                            <td>9.69k </td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>Chocolate</td>
+                            <td>0.19k</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>Carafa Special Malt Type 3</td>
+                            <td>0.44k</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </body>
